--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 *.sch-bak
 *~
 _autosave-*
+\#auto_saved_files\#
 *.tmp
 *-save.pro
 *-save.kicad_pcb
@@ -27,3 +28,8 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+# LTSpice
+*.log
+*.raw
+
